--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   firebase_auth: ^3.3.14
   firebase_core: ^1.17.0
   cloud_firestore: ^3.1.13
+  carousel_slider: ^4.1.1
+  equatable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
