--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   cloud_firestore: ^3.1.13
   carousel_slider: ^4.1.1
   equatable: ^2.0.0
+  flutter_bloc: ^7.0.0
 
 dev_dependencies:
   flutter_test:
